2010-xx-xx:
    * version 2.4
    * Fix hints display on some pages like stackoverflow (thanks Jez)
    * Fix relative paths in :cd
    * Support rich text editor written by HTML.
      mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
      And update map [m]i[m]: into be editing mode if editable otherwise CARET mode.
    * Strings starting with a "." are no longer treated as urls by :open et.al.
    * add *-javascript* flag to [c]:abbreviate[c], [c]:iabbrev[c] and [c]:cabbrev[c].

2010-04-07:
    * version 2.3.1
    * Fix a problem in the XPI which caused problems for some users
    * gH should work with multiple homepages
    * fix 'activate' option for some values

2010-03-29:
    * version 2.3
    * remove | mapping to toggle source view, as gf already does
      exactly that and | might be of use for some future piping feature
    * add basic plugin authorship documentation
    * plugins may now provide full-fleged ':help' documentation
    * asciidoc is no longer required to build Vimperator
    * the help system is newly modularized
    * remove [c]:edit[c], [c]:tabedit[c], and [c]:winedit[c]
    * add 'jsdebugger' option - switch on/off javascript debugger service
    * add "addons", "downloads", "extoptions" and "help" to the 'activate' option.
    * add *-urls* option to mapping commands.
    * many more small bug fixes

2009-10-28:
    * version 2.2
    * IMPORTANT: Vimperator's licence has changed from the MPL/GPL/LGPL
      tri-license to the MIT license.
    * IMPORTANT: Map.flags has been replaced with individual properties.
      Mappings defined in plugins with mappings.add will need to be updated.
...................................
      E.g.
          mappings.add(...,
              { flags: Mappings.flags.ARGUMENT |
                       Mappings.flags.COUNT |
                       Mappings.flags.MOTION |
                       Mappings.flags.ALLOW_EVENT_ROUTING });
      is now
	   mappings.add(...,